--- a/style.css
+++ b/style.css
@@ -1,12 +1,68 @@
 * {
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 html,
 body {
   margin: 0;
   padding: 0;
+  background-color: hsl(0deg, 0%, 100%);
+  color: hsl(0deg, 0%, 0%);
 }
 
 /* Add styles here! */
+
+.intro-chunk {
+  font-size: 1.1rem;
+  line-height: 1.5;
+  width: fit-content;
+  min-width: 600px;
+  padding: 20px;
+  margin-left: auto;
+  margin-right: auto;
+}
+p {
+  max-width: 30ch;
+}
+.max-width-wrapper {
+  max-width: 100%;
+}
+
+strong {
+  color: hsl(160deg, 100%, 30%);
+}
+
+main p {
+  max-width: 65ch;
+}
+
+header {
+  padding: 40px 0;
+}
+
+section {
+  background-color: hsl(0deg, 0%, 60%);
+  border-top: 5px solid hsl(0deg, 0%, 40%);
+  padding: 40px 0;
+}
+
+.card {
+  font-size: 1rem;
+  line-height: 1.5;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  background-color: hsl(0deg, 0%, 100%);
+  border-bottom: 5px solid hsl(0deg, 0%, 40%);
+}
+
+.indented-heading {
+  background-color: hsl(45deg, 100%, 50%);
+  border-bottom: 5px solid hsl(45deg, 100%, 40%);
+  padding: 16px 32px;
+  width: fit-content;
+  margin-top: -10px;
+  margin-left: -32px;
+}
